создание страниц к кейсам

--- a/popular.html
+++ b/popular.html
@@ -3,23 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Редкие ножи и оружия в кейсах</title>
+
     <style>
-        .menu_popular_cases{
-        height: 100px;
-        width: 100%;
-        background-color: rgb(92, 82, 82);
+        .menu1 {
+            height: 100px;
+            width: 100%;
+            background-color: rgb(116, 105, 105);
+            display: flex;
+            gap: 20px;
+            align-items: center;
+            padding: 0 20px;
         }
+        .menu1 img{
+             width: 100px;
+            height: 80px;
+            object-fit: cover; /* создание одинакового размера изображений  */
+            border-radius: 8px;
+        
+        }
+
+        .menu1 a {
+            text-decoration: none; /* Убираем подчёркивание */
+            color: white; /* Белый текст для контраста */
+        }
+
+        .menu1 p {
+            font-size: 20px;
+            margin: 0; /* Убираем стандартные отступы у <p> */
+        }
+
+     
+
 
     </style>
 </head>
 <body>
-    <div class="menu_popular_cases" >
-        <a href="file:///D:/SCC/index.js/inex.html/index.html">
-            <p>Вернутнся в каталог</p>
-        </a>
 
-    </div>
+<div class="menu1">
+
+    <img src="https://tse1.mm.bing.net/th/id/OIP.w7RG75LxWRmxCCLhJfMnawAAAA?rs=1&pid=ImgDetMain&o=7&rm=3" alt="">
+    <a href="file:///D:/SCC/index.js/inex.html/index.html">
+        <p>В каталог</p>
+    </a>
+    <a href="file:///D:/SCC/index.js/inex.html/popular.html">
+        <p>Редкие ножи и оружия в кейсах вы в (этой вкладке) </p>
+    </a>
+    <a href="#">
+        <p>Вход</p>
+    </a>
+    <a href="#">
+        <p>Регистрация</p>
+    </a>
+</div>
+
+<div class="knifes">
+    <h1>Каталог редких оружий и ножей в кейсах</h1>
+    <img src="https://tse1.mm.bing.net/th/id/OIP.Fv6Ktd0sqy4pzn7mrQRJwgHaFj?rs=1&pid=ImgDetMain&o=7&rm=3" alt="">
+    <p>p2000 Corticera из летнего кейса </p>
+</div>
+
+<div class="knifes" >
+    <img src="https://wiki.swapskins.com/storage/skins/img/butterfly-knife-gamma-doppler-emerald.png" alt="">
+    <p>бабочка эмеральд из коллекции Breakout </p>
+</div>
 
 
 </body>
