завершение сегодняшней работы

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
         /* анимация при наведении на картинки */ 
         .case-item:hover {
         transform: translateY(-8px);
-        box-shadow: 0 10px 25px rgba(0, 0, 0, 0.18);
+        box-shadow: 0 10px 25px gold;
         z-index: 10;
-         border-top: 4px solid #e74c3c; /* Красная полоса сверху при наведении */
+         border-top: 4px solid gold; /* Красная полоса сверху при наведении */
         }
         
 
@@ -96,7 +96,7 @@
         <p>Вы в каталоге</p>
     </a>
     <a href="file:///D:/SCC/index.js/inex.html/popular.html">
-        <p>Редкие ножи и оружия в кейсах</p>
+        <p>Контактная связь</p>
     </a>
     <a href="#">
         <p>Вход</p>
@@ -110,17 +110,19 @@
     <h1>Каталог кейсов</h1>
 
 <div class="cases-grid">
-        <a href="summer-2014.html" target="_blank" class="case-link">
+        <a href="summer-2014.html">
     <div class="case-item">
         <img src="https://tse4.mm.bing.net/th/id/OIP.vNqle-z9mhiuJXc5XOVNJAAAAA?rs=1&pid=ImgDetMain" alt="Летний кейс 2014 года">
         <p>Летний кейс 2014 года</p>
     </div>
 </a>
-
-        <div class="case-item">
+<a href="breakout.html"  >
+<div class="case-item">
             <img src="https://community.steamstatic.com/economy/image/-9a81dlWLwJ2UUGcVs_nsVtzdOEdtWwKGZZLQHTxDZ7I56KU0Zwwo4NUX4oFJZEHLbXU5A1PIYQNqhpOSV-fRPasw8rsUFJ5KBFZv668FFY1naTMdzwTtNrukteIkqT2MO_Uwz5Q6cYhibyXo4rw2ALsrkRoYjuncNCLMlhpEV4XDTk/180x120" alt="Кейс коллекции Breakout">
             <p>Кейс коллекции Breakout</p>
         </div>
+</a>
+        
 
         <div class="case-item">
             <img src="https://tse4.mm.bing.net/th/id/OIP.5fKHcrXgfvH0pVvxHY8CTgAAAA?rs=1&pid=ImgDetMain" alt="Кейс коллекции Змеиный укус">
