--- a/popular.html
+++ b/popular.html
@@ -47,7 +47,7 @@
         <p>В каталог</p>
     </a>
     <a href="file:///D:/SCC/index.js/inex.html/popular.html">
-        <p>Редкие ножи и оружия в кейсах вы в (этой вкладке) </p>
+        <p>Контактная связь (этой вкладке) </p>
     </a>
     <a href="#">
         <p>Вход</p>
@@ -58,16 +58,8 @@
 </div>
 
 <div class="knifes">
-    <h1>Каталог редких оружий и ножей в кейсах</h1>
-    <img src="https://tse1.mm.bing.net/th/id/OIP.Fv6Ktd0sqy4pzn7mrQRJwgHaFj?rs=1&pid=ImgDetMain&o=7&rm=3" alt="">
-    <p>p2000 Corticera из летнего кейса </p>
-</div>
-
-<div class="knifes" >
-    <img src="https://wiki.swapskins.com/storage/skins/img/butterfly-knife-gamma-doppler-emerald.png" alt="">
-    <p>бабочка эмеральд из коллекции Breakout </p>
-</div>
-
+    <h1>Контактная связь</h1>
+    
 
 </body>
 </html>
