Были справлены ссылки и названия страниц

--- a/summer-2014.html
+++ b/summer-2014.html
@@ -40,7 +40,7 @@
 </head>
 <div class="menu3">
     <img src="https://tse1.mm.bing.net/th/id/OIP.w7RG75LxWRmxCCLhJfMnawAAAA?rs=1&pid=ImgDetMain&o=7&rm=3" alt="">
-    <a href="file:///D:/SCC/index.js/inex.html/index.html">
+    <a href="index.html">
         <p>вы в летнем кейсе (нажмите чтобы вернутся)</p>
     </a>
     
