--- a/breakout.html
+++ b/breakout.html
@@ -42,7 +42,7 @@
 <body>
     <div class="menu4">
     <img src="https://tse1.mm.bing.net/th/id/OIP.w7RG75LxWRmxCCLhJfMnawAAAA?rs=1&pid=ImgDetMain&o=7&rm=3" alt="">
-    <a href="file:///D:/SCC/index.js/inex.html/index.html">
+    <a href="index.html">
         <p>вы в кейсе Breakout (нажмите чтобы вернутся)</p>
     </a>
     
