--- a/danger.html
+++ b/danger.html
@@ -40,8 +40,8 @@
 </head>
 <div class="menu3">
     <img src="https://tse1.mm.bing.net/th/id/OIP.w7RG75LxWRmxCCLhJfMnawAAAA?rs=1&pid=ImgDetMain&o=7&rm=3" alt="">
-    <a href="file:///D:/SCC/index.js/inex.html/index.html">
-        <p>вы в змеином кейсе (нажмите чтобы вернутся)</p>
+    <a href="danger.html">
+        <p>вы в кейсе Запретная зона (нажмите чтобы вернутся)</p>
     </a>
     
     <a href="#">
