--- a/popular.html
+++ b/popular.html
@@ -43,11 +43,11 @@
 <div class="menu1">
 
     <img src="https://tse1.mm.bing.net/th/id/OIP.w7RG75LxWRmxCCLhJfMnawAAAA?rs=1&pid=ImgDetMain&o=7&rm=3" alt="">
-    <a href="file:///D:/SCC/index.js/inex.html/index.html">
+    <a href="index.html">
         <p>В каталог</p>
     </a>
-    <a href="file:///D:/SCC/index.js/inex.html/popular.html">
-        <p>Контактная связь (этой вкладке) </p>
+    <a href="popular.html">
+        <p>Контактная связь  </p>
     </a>
     <a href="#">
         <p>Вход</p>
@@ -58,7 +58,9 @@
 </div>
 
 <div class="knifes">
-    <h1>Контактная связь</h1>
+    <h1>О нас </h1>
+    <p>Этот сайт предназначен для ознакомления с кейсами и их историей </p>
+    
     
 
 </body>
