--- a/danger.html
+++ b/danger.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Летний кейс 2014 — CS:GO</title>
+    <title>Кейс запретная зона — CS:GO</title>
     <style>
          .menu3 {
             height: 100px;
