--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         }
 
         .menu a {
-            text_decoration: none; /* Убираем подчёркивание */
+            text-decoration: none; /* Убираем подчёркивание */
             color: white; /* Белый текст для контраста */
         }
 
@@ -124,7 +124,7 @@
 </a>
         
 <a href="zmei.html">
-<div class="case-item">
+<div class="case_item">
             <img src="https://tse4.mm.bing.net/th/id/OIP.5fKHcrXgfvH0pVvxHY8CTgAAAA?rs=1&pid=ImgDetMain" alt="Кейс коллекции Змеиный укус">
             <p>Кейс коллекции Змеиный укус</p>
         </div>
@@ -148,7 +148,7 @@
     <div class="case_item" >
             <img src="https://imageproxy.csmarketcap.com/insecure/rs:fit:400:350:0/g:nowe/f:webp/plain/https://images.csmarketcap.com/i/730-danger-zone-case.webp" alt="">
             <p>Кейс запретная зона</p>
-        </div>
+        </div>`
 </a>              
         
     </div>
