--- a/seti.html
+++ b/seti.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Летний кейс 2014 — CS:GO</title>
+    <title>Расколотая сеть — CS:GO</title>
     <style>
          .menu3 {
             height: 100px;
@@ -41,7 +41,7 @@
 <div class="menu3">
     <img src="https://tse1.mm.bing.net/th/id/OIP.w7RG75LxWRmxCCLhJfMnawAAAA?rs=1&pid=ImgDetMain&o=7&rm=3" alt="">
     <a href="index.html">
-        <p>вы в змеином кейсе (нажмите чтобы вернутся)</p>
+        <p>вы в кейсе Расколотая сеть (нажмите чтобы вернутся)</p>
     </a>
     
     <a href="#">
