работа со стилями

--- a/breakout.html
+++ b/breakout.html
@@ -3,44 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Breakout — CS:GO</title>
-    <style>
-         .menu4 {
-            height: 100px;
-            width: 100%;
-            background-color: rgb(116, 105, 105);
-            display: flex;
-            gap: 20px;
-            align-items: center;
-            padding: 0 20px;
-        }
-        .menu4 img{
-             width: 100px;
-            height: 80px;
-            object-fit: cover; /* создание одинакового размера изображений  */
-            border-radius: 8px;
-        
-        }
-
-        .menu4 a {
-            text-decoration: none; /* Убираем подчёркивание */
-            color: white; /* Белый текст для контраста */
-        }
-
-        .menu4 p {
-            font-size: 20px;
-            margin: 0; /* Убираем стандартные отступы у <p> */
-        }
-
-
-
-        body { font-family: Arial, sans-serif; background: #f5f5f5; padding: 20px; }
-        .container { max-width: 800px; margin: 0 auto; background: white; padding: 20px; border-radius: 10px; }
-        h1 { color: gold; }
-        ul { line-height: 1.6; }
-    </style>
+    <link rel="style.css" href="style.css">
+    
 </head>
 <body>
-    <div class="menu4">
+    <div class="menu">
     <img src="https://tse1.mm.bing.net/th/id/OIP.w7RG75LxWRmxCCLhJfMnawAAAA?rs=1&pid=ImgDetMain&o=7&rm=3" alt="">
     <a href="index.html">
         <p>вы в кейсе Breakout (нажмите чтобы вернутся)</p>
