--- a/breakout.html
+++ b/breakout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Breakout — CS:GO</title>
-    <link rel="style.css" href="style.css">
+    <link rel="stylesheet" href="style.css">
     
 </head>
 <body>
