была исравлена ошибка с кейсом запретная зона

--- a/danger.html
+++ b/danger.html
@@ -8,7 +8,7 @@
 </head>
 <div class="menu">
     <img src="https://tse1.mm.bing.net/th/id/OIP.w7RG75LxWRmxCCLhJfMnawAAAA?rs=1&pid=ImgDetMain&o=7&rm=3" alt="">
-    <a href="danger.html">
+    <a href="index.html">
         <p>вы в кейсе Запретная зона (нажмите чтобы вернутся)</p>
     </a>
     
