--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <div class="cases_grid">
         <a href="summer-2014.html">
-    <div class="case_item">
+    <div class="case_item "  >
         <img src="https://tse4.mm.bing.net/th/id/OIP.vNqle-z9mhiuJXc5XOVNJAAAAA?rs=1&pid=ImgDetMain" alt="Летний кейс 2014 года">
         <p>Летний кейс 2014 года</p>
     </div>
@@ -68,11 +68,13 @@
     <div class="case_item" >
             <img src="https://imageproxy.csmarketcap.com/insecure/rs:fit:400:350:0/g:nowe/f:webp/plain/https://images.csmarketcap.com/i/730-danger-zone-case.webp" alt="">
             <p>Кейс запретная зона</p>
-        </div>`
+        </div>
 </a>              
         
     </div>
 </div>
+
+
 
 </body>
 </html>
