были добавлены ссылки на вход и регистрацию

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <p>Вы в каталоге</p>
     </a>
     <a href="popular.html">
-        <p>Контактная связь</p>
+        <p>О нас</p>
     </a>
-    <a href="#">
+    <a href="vhod.html">
         <p>Вход</p>
     </a>
-    <a href="#">
+    <a href="reg.html">
         <p>Регистрация</p>
     </a>
 </div>
